# awafy

./: Cargo.toml  scratch.nu
src/: auth.rs  constants.rs  daemon.rs  https.rs  main.rs  models.rs  rooms.rs  utils.rs
src/commands/: daemon.rs  login.rs  mod.rs
